[package]
name = "linera-price-market"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
linera-sdk = "0.15"
async-graphql = "7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"

[dev-dependencies]
linera-sdk = { version = "0.15", features = ["test"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "linera_price_market_contract"
path = "src/contract.rs"

[[bin]]
name = "linera_price_market_service"
path = "src/service.rs"
